--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -90,6 +90,114 @@
 \titlepage
 \end{frame}
 
+\section{Introduction}
+
+\begin{frame}\frametitle{Instructional team}
+A physicist, an engineer, and a technician walk into a classroom...
+\end{frame}
+
+\begin{frame}
+\frametitle{The Engineer: Brian Rashap, Ph.D.}
+\begin{columns}
+\begin{column}{6.5cm}
+\begin{itemize}
+\item Proud husband of Krista and father of Shelby (27) and Ethan (23)
+\item Electrical Engineer (Michigan) with 23 years industrial experience (Intel)
+\item Created and taught IoT Bootcamp for 5 years (and going)
+\item Hobbies: painting, cycling, swimming, reading, spending time with family
+\end{itemize}
+\end{column}
+\begin{column}{4.5cm}
+\begin{center}
+\includegraphics[width=4.5cm]{fig/rashapfamily.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}
+\frametitle{The Physicist: Megan Ivory}
+\begin{columns}
+\begin{column}{7cm}
+\begin{itemize}
+\item 
+\end{itemize}
+\vspace{1cm} 
+\end{column}
+\begin{column}{4cm}
+\begin{center}
+
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}
+\frametitle{The Technician: Shawn Morales}
+\begin{columns}
+\begin{column}{7cm}
+\begin{itemize}
+\item 
+
+\vspace{0.25cm}
+
+\end{itemize}
+\vspace{1cm} 
+\end{column}
+\begin{column}{4cm}
+\begin{center}
+
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+
+
+
+
+
+
+
+\begin{frame}\frametitle{Student Introductions}
+\begin{itemize}
+\item Your name
+\item What were you up to before starting the bootcamp
+\item Any prior experience with math, science, machining, etc.
+\item What do you hope to get out of the bootcamp
+\end{itemize}
+\end{frame}
+
+\begin{frame}\frametitle{Class Rules}
+\begin{itemize}
+\item Respect each other. Help each other.
+\item Ask questions. 
+\item Be on time (let us know via Slack if you won't be here) 
+\item Keep your workspace and the classroom neat and tidy.
+\item If you are struggling, let us know. We are here to HELP!
+\item Class hours
+\begin{itemize}
+\item Mon-Th: 8am to 5pm \footnote{Doors open at 7:50, please be in your seats ready to learn by 8:00} and Friday: 8am to 3pm \footnote{Occasionally on Friday there will be optional activities from 3 to 5}
+\item Lunch Break: 1 hour near noon. Maybe combined with work time. 
+\item Please respect the instructors' lunch break as well.
+\end{itemize}
+\item Phone Policy: phones should not be out or used during class
+\begin{itemize}
+\item No gaming, no surfing social media
+\item If you need to take/make a call, please set out of the classroom
+\item Exceptions: two-factor authentication, pictures of projects, class videos
+\end{itemize}
+\end{itemize}
+\end{frame}
+
+\begin{frame}\frametitle{Important Attribute in an Employee}
+\begin{itemize}
+\item Tolerance of Ambiguity
+\item Attention to Detail
+\item Curiosity
+\item Structured Problem Solving
+\end{itemize}
+\end{frame}
 
 
 \section{Overview: QIS in NM}
@@ -348,6 +456,196 @@ $c=2.99792458×10^8 (\frac{m}{s})$.
 
 \end{frame}
 
+
+\begin{frame}\frametitle{Assignment: Two Mirror Walk}
+\begin{columns}
+\begin{column}{4cm}
+\begin{center}
+\includegraphics[width=3cm]{fig/twoMirror.jpg}
+
+\vspace{1cm}
+\includegraphics[width=4cm]{fig/twoMirror2.jpg}
+
+\end{center}
+\end{column}
+\begin{column}{7.5cm}
+\begin{itemize}
+\item Supplies:
+\begin{itemize}
+\item Laser
+\item Two mirrors set at different heights
+\item Two irises, same height
+\item Alignment target
+\end{itemize}
+\item Setup as shown on left
+\item Adjust first mirror to hit center of second
+\item Adjust second to shine laser through both iris
+\end{itemize}
+\end{column}
+\end{columns}
+
+\end{frame}
+
+\section{Trigonometry}
+
+
+
+\begin{frame}\frametitle{Algebraic Functions}
+\begin{columns}
+\begin{column}{4.5cm}
+An algebraic function provides a "y-value" for every "x-value"
+\begin{itemize}
+\item Linear: $y = x + 2$
+\item Quadratic: $y = x^2$
+\item Periodic: $y = sin(x)$
+\end{itemize}
+\end{column}
+\begin{column}{7cm}
+\begin{center}
+\includegraphics[width=7cm]{fig/basicfun.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{More Desmos Fun}
+
+\begin{center}
+\includegraphics[width=12cm]{fig/desmosfun.jpg}
+\end{center}
+\end{frame}
+
+
+\begin{frame}\frametitle{Pi ($\pi)$}
+
+\begin{center}
+\includegraphics[width=8cm]{fig/pi.png}
+\end{center}
+
+\end{frame}
+
+
+\begin{frame}\frametitle{Unit Circle and Trigonometric Functions}
+The Unit Circle is a circle with a radius of 1.
+\begin{columns}
+\begin{column}{6cm}
+\begin{center}
+\includegraphics[scale=0.75]{fig/unitcircle.png}
+\end{center}
+\end{column}
+\begin{column}{6cm}
+\begin{center}
+\includegraphics[scale=0.75]{fig/unitcircle_cst.png}
+\end{center}
+\end{column}
+\end{columns}
+The Unit Circle can be used to map out the trigonometric values of sine, cosine, and tangent.
+\end{frame}
+
+
+\begin{frame}\frametitle{Unit Circle and the Value of $sin(\theta)$}
+\begin{columns}
+\begin{column}{6cm}
+\begin{center}
+\includegraphics[scale=0.25]{fig/unitcircle_sin.png}
+\end{center}
+\end{column}
+\begin{column}{6cm}
+\begin{center}
+\includegraphics[scale=0.75]{fig/unitcircle_rad.png}
+\end{center}
+\end{column}
+\end{columns}
+
+\vspace{0.25cm}
+
+\begin{itemize}
+\item $sin(\theta)$ is the y-value of the point on the Unit Circle at angle $\theta$. 
+\item In our trig functions, $\theta$ is measured in radians (rad), not degrees.
+\item 360 degrees = $2 \pi$ radians.
+\end{itemize}
+\end{frame}
+
+
+
+\begin{frame}\frametitle{Sine Waves}
+\begin{center}
+\includegraphics[scale=0.25]{fig/sin.jpg}
+\end{center}
+
+\begin{center}
+$y = A * sin(2*\pi*\nu*t) + B$
+\end{center}
+
+where A = amplitude, B = offset, $\nu$ = frequency = $\frac{1}{period}$, 
+
+and t = time in seconds.
+\end{frame}
+
+
+\begin{frame}\frametitle{Using Desmos (desmos.com/calculator)}
+\begin{center}
+\includegraphics[scale=0.35]{fig/desmos1.jpg}
+\end{center}
+\begin{center}
+
+\vspace{0.5cm}
+
+\includegraphics[scale=0.35]{fig/desmos2.jpg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Phase Shift}
+The sine wave can be shifted relative to each other by adding in a phase shift ($\phi$), which will shift the wave to the left or right.
+
+Blue lags Red: 
+\begin{center}
+\includegraphics[height=2.6cm]{fig/sin_lag.jpg}
+\end{center}
+
+Green leads Red: 
+\begin{center}
+\includegraphics[height=2.6cm]{fig/sin_lead.jpg}
+\end{center}
+
+\end{frame}
+
+
+
+
+\begin{frame}\frametitle{SOH CAH TOA}
+
+\begin{itemize}
+\item sin = opposite over hypotenuse
+\item cos = adjacent over hypotenuse
+\item tan = opposite over adjacent
+\end{itemize}
+
+\vspace{0.25cm}
+
+\begin{center}
+\includegraphics[scale=0.35]{fig/sohcahtoa.jpg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Assignment: Calculating Angles}
+\begin{columns}
+\begin{column}{4cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/sextant.jpg}
+\end{center}
+\end{column}
+\begin{column}{7cm}
+\begin{itemize}
+\item Some assignment on measuring angles and using trig
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
+
+\section{Return to Geometric Optics}
+
 \begin{frame}\frametitle{Refraction}
 The changing of a light ray’s direction (loosely called bending) when it passes through variations in matter is called refraction.
 
@@ -413,6 +711,24 @@ n_2 = (1.00) \cdot \frac{\sin{30^\circ}}{\sin{22^\circ}} = \frac{0.500}{0.375} =
 \end{equation}
 
 \end{frame}
+
+\begin{frame}\frametitle{Assignment: Measuring Refraction}
+\begin{columns}
+\begin{column}{4cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/refract9.jpg}
+\end{center}
+\end{column}
+\begin{column}{7cm}
+\begin{itemize}
+\item Some assignment on refraction
+\item Acrylic, water, what else?
+\item Different color lasers (red, green, and if we get blue in time)
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
 
 \begin{frame}\frametitle{Total Internal Reflection}
 
@@ -1630,11 +1946,59 @@ Neils Bohr, Dutch physicist, derived the spectrum from the planetary model and:
 \end{frame}
 
 
-\section{Intro to Quantum Phenomenon}
+\section{Schrodenger's Atom}
 
-\begin{frame}\frametitle{Let there be light}
+\begin{frame}\frametitle{Waves and Quantization}
+\begin{columns}
+\begin{column}{6.5cm}
+\begin{itemize}
+\item Per de Broglie proposed matter has wave-like properties ($\lambda = \frac{h}{p}$)
+\item Electrons can only exist in locations where they interfere constructively.
+\item Not all orbits produce constructive interference, so not all allowed
+\[ n \lambda_n = 2 \pi r_n \text{, for n = 1, 2, 3, ...} \]
+\[ \frac{nh}{m_e v} = 2 \pi r_n \]
+Angular Momentum (L):
+\[ L = m_e v r_n = n \frac{h}{2 \pi}  \text{, for n = 1, 2, 3, ...} \]
+\end{itemize}
+\end{column}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=5cm]{fig/bohr1.jpg}
 
+\vspace{1cm}
+
+\includegraphics[width=5cm]{fig/bohr2.jpg}
+\end{center}
+\end{column}
+\end{columns}
 \end{frame}
+
+\begin{frame}\frametitle{Probability Cloud}
+\begin{columns}
+\begin{column}{6.5cm}
+Due to the wave nature of matter, the idea of well-defined orbits gives way to a model in which there is a cloud of probability, consistent with the Heisenberg uncertainty principle. 
+\end{column}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=5cm]{fig/schrodenger1.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Patterns in Spectra - Zeeman Effect}
+\begin{columns}
+\begin{column}{6.5cm}
+Dutch physics student Pieter Zeeman investigated how spectra are affected by magnetic fields. In the presence of an external\footnote{Very percise measurements have shown that spectrail lines are doublets (split in two) apparently by the magnetic fields within the atom itself.} magnetic fields, the spectral lines split into two or more separate lines.
+\end{column}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=5cm]{fig/zeeman1.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
 
 \section{What is a Qubit}
 
