--- a/bootcamp/quantum_math.tex
+++ b/bootcamp/quantum_math.tex
@@ -1130,6 +1130,30 @@ Roll two dice and add them together, repeat. \newline
 
 \end{frame}
 
+\begin{frame}\frametitle{Assignment: Tenzi}
+\begin{columns}
+\begin{column}{4cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/dice.jpg}
+\end{center}
+\end{column}
+\begin{column}{7cm}
+
+Role two dice 12 times, after each role:
+\begin{itemize}
+\item Record the sum
+\item Record the running average (total up to this point divided by number of roles)
+\end{itemize}
+After the twelfth role:
+\begin{itemize}
+\item Create a histogram of the sums
+\item Create a line chart of the running averages
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
+
 \begin{frame}\frametitle{Summary Statistics}
 
 
@@ -1211,6 +1235,25 @@ Probability Distribution Function $f(x)$:
 Galton Baord
 \includegraphics[width=4cm]{fig/stat7.png}
 \end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Assignment: Measuring Bean Profile}
+\begin{columns}
+\begin{column}{6cm}
+\begin{center}
+\includegraphics[width=6cm]{fig/profile.png}
+\end{center}
+\end{column}
+\begin{column}{5cm}
+The laser beam has a Gaussian profile.
+\begin{itemize}
+\item Setup a telescope to expand the beam size
+\item Focus on the beam on an intensity detector
+\item Moving the knife edge across the beam path, record the drop in intensity vs distance.
+\item Plot the resulting data
+\end{itemize}
 \end{column}
 \end{columns}
 \end{frame}
