--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -194,11 +194,11 @@ A physicist, an engineer, and a technician walk into a classroom...
 \begin{itemize}
 \item Tolerance of Ambiguity
 \item Attention to Detail
+\item Reliability 
 \item Curiosity
 \item Structured Problem Solving
 \end{itemize}
 \end{frame}
-
 
 \section{Overview: QIS in NM}
 
@@ -211,6 +211,12 @@ A physicist, an engineer, and a technician walk into a classroom...
 \begin{frame}\frametitle{Introduction}
 \begin{center}
 \includegraphics[width=12cm]{fig/Slide4.jpeg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Introduction}
+\begin{center}
+\includegraphics[width=12cm]{fig/supercat.jpg}
 \end{center}
 \end{frame}
 
@@ -256,8 +262,6 @@ A physicist, an engineer, and a technician walk into a classroom...
 \end{center}
 \end{frame}
 
-
-
 \begin{frame}\frametitle{Introduction}
 \begin{center}
 \includegraphics[width=12cm]{fig/Slide12.jpeg}
@@ -276,98 +280,82 @@ A physicist, an engineer, and a technician walk into a classroom...
 \end{center}
 \end{frame}
 
-
-
 \begin{frame}\frametitle{Introduction}
 \begin{center}
 \includegraphics[width=12cm]{fig/Slide15.jpeg}
 \end{center}
 \end{frame}
 
-\section{Course Overview}
 
-\begin{frame}\frametitle{Overview}
+
+\begin{frame}\frametitle{What you will learn}
 \begin{itemize}
 \item Optics
 \item Lasers / Photonics
 \item Ultra-High Vacuum Systems
 \item Quantum Phenomenon
 \item Applied Mathematics
+\item Structured Problem Solving
 \end{itemize}
 \end{frame}
 
-\begin{frame}\frametitle{Optics}
+\section{Atomic Quantum Systems}
+
+
+\section{Safety}
+
+\begin{frame}\frametitle{Safety Walk}
+\begin{center}
+\includegraphics[width=6cm]{fig/gemba.png}
+\end{center}
+\end{frame}
+
+
+\begin{frame}\frametitle{Laser Safety}
+
+\begin{center}
+\includegraphics[width=10cm]{fig/lsafe.png}
+\end{center}
+
 \begin{itemize}
-\item Lab Safety and Handling of Optical Components
-\item Reflection and Refraction: Prisms, Waveguides, and Dispersion
-\item Focusing, Imaging, and the Paraxial Approximation
-\item Thin Lens
-\item Think Lens and Compound Lens
-\item Apertures, Stops, Pupils, Windows
-\item Mirrors: Convex, Concave
-\item Cameras: Focusing, Resolution, and Contrast
-\item Aberrations
-\item Telescopes / Microscopy
-\item Spectra and Filters
+\item Class 2 lasers, which are limited to 1 mW of visible continuous-wave radiation, are safe because the blink reflex will limit the exposure in the eye to 0.25 seconds. This category only applies to visible radiation (400 - 700 nm).
 \end{itemize}
+
 \end{frame}
 
-\begin{frame}\frametitle{Laser and Photonics}
+\begin{frame}\frametitle{Laser Safety - Continued}
 \begin{itemize}
-\item Laser  Safety
-\item Introduction to Lasers and Atomic Energy Levels
-\item Beam Properties: laser modes, beam profile, and coherence.
-\item Interferometry
-\item Polarization – polarizers, half/quarter wave plates
-\item Optical intensity. Single-mode and multi-mode optical fibers
-\item Optical detectors: photodiode, photomultiplier tubes, avalanche photodiodes, infrared detectors
-\item Optical spectra and emission spectroscopy
-\item Absorption Spectroscopy
-\item Optical Tweezers
-\item Industrial Applications of Laser and Photonics
+\item Class 3R lasers produce visible and invisible light that is hazardous under direct and specular-reflection viewing conditions. Eye injuries may occur if you directly view the beam, especially when using optical instruments. Lasers in this class are considered safe as long as they are handled with restricted beam viewing. The MPE can be exceeded with this class of laser; however, this presents a low risk level to injury. Visible, continuous-wave lasers in this class are limited to 5 mW of output power.
+\item Class 3B lasers are hazardous to the eye if exposed directly. Diffuse reflections are usually not harmful, but may be when using higher-power Class 3B lasers. Safe handling of devices in this class includes wearing protective eyewear where direct viewing of the laser beam may occur. Lasers of this class must be equipped with a key switch and a safety interlock; moreover, laser safety signs should be used, such that the laser cannot be used without the safety light turning on. Laser products with power output near the upper range of Class 3B may also cause skin burns.
 \end{itemize}
+
 \end{frame}
 
-\begin{frame}\frametitle{Ultra-High Vacuum Systems}
+
+\begin{frame}\frametitle{Lock Out Tag Out}
+\begin{center}
+\includegraphics[width=4cm]{fig/loto.jpg}
+\end{center}
+
 \begin{itemize}
-\item Vacuum System Safety including Lock-out Tag-out (LOTO) of electrical and mechanical hazards
-\item Foundations of Vacuum Technology
-\item Vacuum Pump Technologies – Displacement: Backing Pumps, Turbomolecular Pumps.
-\item Vacuum Measurement: Pirani and Ion Gauges
-\item Vacuum System Assembly
-\item Vacuum System Contamination
-\item Leak Detection
-\item High Vacuum vs Ultra-High Vacuum
-
+\item Electrical Energy
+\item Mechanical Energy
+\item Mechanical Energy - Pneumatics
 \end{itemize}
 \end{frame}
 
-\begin{frame}\frametitle{Quantum Phenomenon}
-\begin{itemize}
-\item Introduction to Quantum 
-\item Superposition, Quantum Gates
-\item Entanglement
-\item Particle/Wave Dual Nature of Light, Polarization, and Quantum Eraser
-\item Quantum Measurements
-\item Cryogenics
-\item Superconducting and Spin Qubits
-\item Laser Cooling
-\item Atomic, Molecular, and Optical Qubits
-\item Neutral Atom QIS Operations
-\item Quantum Sensors: Diamond NV
-\end{itemize}
+\begin{frame}\frametitle{Sharps}
+\begin{center}
+\includegraphics[width=6cm]{fig/sharps.png}
+\end{center}
 \end{frame}
 
-\begin{frame}\frametitle{Applied Math}
-\begin{itemize}
-\item College Algebra
-\item Vectors
-\item Trigonometry
-\item Linear Algebra
-\item Statistics
-\end{itemize}
-\end{frame}
 
+\begin{frame}\frametitle{High Voltage}
+\begin{center}
+\includegraphics[width=6cm]{fig/highV.jpg}
+\end{center}
+\end{frame}
 
 \section{Geometric Optics}
 
@@ -391,6 +379,31 @@ The angle of reflection equals the angle of incidences
 \end{center}
 
 \end{frame}
+
+\begin{frame}\frametitle{Demonstration: Handling Optics}
+\begin{center}
+\includegraphics[width=6cm]{fig/opticscleaning.jpg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Assignment: Laser Tag}
+\begin{columns}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=4.5cm]{fig/lasertag.jpg}
+\end{center}
+\end{column}
+\begin{column}{7cm}
+\begin{itemize}
+\item Align a Laser and a target at opposite ends of the table.
+\item When obstacles are placed in the path, without adjusting laser, add mirrors to get the beam to the target.
+\end{itemize}
+\end{column}
+
+\end{columns}
+\end{frame}
+
+
 
 
 \begin{frame}\frametitle{Rough vs Smooth Surfaces}
@@ -433,30 +446,6 @@ $c=2.99792458×10^8 (\frac{m}{s})$.
 \end{columns}
 \end{frame}
 
-
-\begin{frame}\frametitle{Two Mirror Walk}
-\begin{columns}
-\begin{column}{8cm}
-\begin{itemize}
-\item Center of first mirror should match incoming height of incoming beam path and the second mirror set to the height of of the target beam path.
-\item Set alignment target at height of target.
-\item Course adjust both mirrors by hand.
-\item Place the alignment target along the beampath to the target
-\item Fine tune the beampath by using the adjusters on both mirrors. Note: adjusting the first mirror affects the placement of the second mirror. 
-\item Move the alignment target along the output beampath to endure it is level
-\end{itemize}
-
-\end{column}
-\begin{column}{4cm}
-\begin{center}
-\includegraphics[width=3.8cm]{fig/twoMirror.jpg}
-\end{center}
-\end{column}
-\end{columns}
-
-\end{frame}
-
-
 \begin{frame}\frametitle{Assignment: Two Mirror Walk}
 \begin{columns}
 \begin{column}{4cm}
@@ -469,18 +458,12 @@ $c=2.99792458×10^8 (\frac{m}{s})$.
 \end{center}
 \end{column}
 \begin{column}{7.5cm}
-\begin{itemize}
-\item Supplies:
-\begin{itemize}
-\item Laser
-\item Two mirrors set at different heights
-\item Two irises, same height
-\item Alignment target
-\end{itemize}
-\item Setup as shown on left
-\item Adjust first mirror to hit center of second
-\item Adjust second to shine laser through both iris
-\end{itemize}
+\begin{enumerate}
+\item Setup: Laser, $45^{\circ}$ mirror, second $45^{\circ}$ mirror, two irises, target.
+\item Adjust first mirror to center beam on center iris 1
+\item Open iris 1, adjust second mirror to center beam on iris 2
+\item Iterate steps 2 and 3 until the beam passes through the center of both iris and hits target.
+\end{enumerate}
 \end{column}
 \end{columns}
 
@@ -628,16 +611,20 @@ Green leads Red:
 \end{center}
 \end{frame}
 
-\begin{frame}\frametitle{Assignment: Calculating Angles}
+\begin{frame}\frametitle{Assignment: Calculating Angles: Laser Billards}
 \begin{columns}
 \begin{column}{4cm}
 \begin{center}
-\includegraphics[width=4cm]{fig/sextant.jpg}
+\includegraphics[width=4cm]{fig/billards.jpg}
 \end{center}
 \end{column}
 \begin{column}{7cm}
 \begin{itemize}
-\item Some assignment on measuring angles and using trig
+\item Setup a mirror line on the optical table.
+\item Place the laser and target two different distances from the line.
+\item Calculate the location of the mirror, place the mirror there.
+\item Calculate the angle of the laser, adjust laser angle.
+\item Turn on laser and see how close on target the calculations are.
 \end{itemize}
 \end{column}
 \end{columns}
@@ -939,6 +926,24 @@ With the Law of Refraction, we can explore the properties of lens and how images
 \end{columns}
 \end{frame}
 
+
+\begin{frame}\frametitle{Assigment: Find the Focal Length}
+\begin{columns}
+\begin{column}{4.6cm}
+\begin{center}
+\includegraphics[width=4.5cm]{fig/sunfire.jpg}
+\end{center}
+\end{column}
+\begin{column}{7.4cm}
+\begin{itemize}
+\item Using some random lens, use the overhead lighting to find the focal length
+\item Repeat on optical table using laser
+\item Clean lens before putting away
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
 \begin{frame}\frametitle{Thin Lens}
 A thin lens is defined to be one whose thickness allows rays to refract but does not allow properties such as dispersion and aberrations.
 \end{frame}
@@ -1049,7 +1054,210 @@ m_{12} = \frac{f_2}{f_1}
 
 \end{frame}
 
-\subsection{mirrors}
+
+
+\section{Math Interlude: Probability}
+
+\begin{frame}\frametitle{Probability and Statistics}
+\begin{columns}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=5cm]{fig/cartoonguidestats.jpg}
+\end{center}
+\end{column}
+\begin{column}{5cm}
+\begin{itemize}
+\item Data Analysis: The gathering, display, and summary of data
+\item Probability: The laws of chance (inside and outside of a casino)
+\item Statistical Inference: the science of drawing statistical conclusions from specific data using the laws of probability
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{A Tale as Old as Time}
+\begin{center}
+\includegraphics[width=6cm]{fig/vegas.jpg}
+\end{center}
+
+
+Gambling is as old as mankind, so it seems that probability should be almost as old. But, the realization that one could predict an outcome to a certain degree of accuracy was unconceivable until the $16^{th}$ century. In order to make a profit, underwriters were in need of dependable guidelines by which a profit could be expected, while the gambler was interested in predicting the possibility of gain.
+\end{frame}
+
+
+
+\begin{frame}\frametitle{Rich Guys Gambling}
+\begin{columns}
+\begin{column}{4cm}
+\begin{center}
+\includegraphics[width=3cm]{fig/cardano.jpg}
+\end{center}
+\end{column}
+\begin{column}{7.5cm}
+Known as the “Father of Probability”, Gerolamo Cardano was an Italian mathematician, physician, and gambler who first talked about probability. Cardano’s fascination with games of chance led him to write the first book dedicated to probability, “Liber de Ludo Aleae” (Book on Games of Chance), published in 1564. Cardano introduced concepts like odds and probabilities in this work, providing a framework for analyzing the likelihood of different outcomes in dice rolls and other games.
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Probability}
+
+
+\begin{columns}
+\begin{column}{5cm}
+The probability of an event expresses the likelihood of the event outcome
+
+\[P(event) = \frac{\text{\# of favorable outcomes}}{\text{\# of all possibly outcomes}}\]
+\end{column}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=3cm]{fig/coinflip.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Frequency Tables and Histograms}
+
+\begin{center}
+
+Roll two dice and add them together, repeat. \newline
+
+\includegraphics[width=10cm]{fig/stat1.jpg}
+\end{center}
+
+\end{frame}
+
+\begin{frame}\frametitle{Assignment: Tenzi}
+\begin{columns}
+\begin{column}{4cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/dice.jpg}
+\end{center}
+\end{column}
+\begin{column}{7cm}
+
+Role two dice 12 times, after each role:
+\begin{itemize}
+\item Record the sum
+\item Record the running average (total up to this point divided by number of roles)
+\end{itemize}
+After the twelfth role:
+\begin{itemize}
+\item Create a histogram of the sums
+\item Create a line chart of the running averages
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
+
+\begin{frame}\frametitle{Summary Statistics}
+
+
+\begin{columns}
+\begin{column}{7cm}
+\begin{itemize}
+\item Mean (or average): add the totals and divide by number of samples
+\[ \bar{x} = \frac{x_1 + x_2 + x_3 + ... + x_n}{n} \]
+or
+\[ \bar{x} = \frac{\sum_{i=1}^{n} (x_i)}{n}\]
+\item Median: middle sample in the ordered distribution
+\begin{itemize}
+\item Odd: median is the value of middle sample
+\item Even: median is the average of the two middle samples
+\end{itemize}
+\item Mode: the value the appears most often
+\end{itemize}
+\end{column}
+\begin{column}{4cm}
+\begin{center}
+\includegraphics[width=4cm]{fig/stat2.jpg}
+
+
+average = $\bar{x} = 7$
+
+median $= 6$
+
+mode $ = 6$
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+
+\begin{frame}\frametitle{Summary Statistics: Variation}
+\begin{center}
+\includegraphics[width=11cm]{fig/stat3.jpg}
+\end{center}
+\begin{itemize}
+\item Interquartile Range (IRQ): Spread of the middle $50\%$ of the data
+\begin{itemize}
+\item Find the median
+\item Find the first quartile (Q1): median of the lower half.
+\item Find the third quartile (Q3): median of the upper half.
+\item IRQ = Q3 - Q1 = 6
+\end{itemize}
+
+
+\item Standard Deviations ($\sigma$):
+\[ \sigma = \sqrt{ \frac{ \sum_{i=0}^n (x_i - \bar{x})^2}{n}} = 3.06\]
+
+\end{itemize}
+
+\end{frame}
+
+
+\begin{frame}\frametitle{Gaussian Distribution}
+
+\begin{center}
+\includegraphics[width=6cm]{fig/stat4.png}
+\end{center}
+
+Probability Distribution Function $f(x)$:
+
+\[ f(x) = \frac{1}{\sqrt{2 \pi \sigma^2}} e^{\frac{-(x-\bar{x})^2}{2 \sigma^2}} \]
+
+\end{frame}
+
+\begin{frame}\frametitle{Gaussian Distribution: $3 \sigma$}
+\begin{columns}
+\begin{column}{6cm}
+\begin{center}
+\includegraphics[width=6cm]{fig/stat5.png}
+\end{center}
+\end{column}
+\begin{column}{4cm}
+
+\begin{center}
+Galton Baord
+\includegraphics[width=4cm]{fig/stat7.png}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Assignment: Measuring Bean Profile}
+\begin{columns}
+\begin{column}{4cm}
+\begin{center}
+\includegraphics[width=3cm]{fig/profile1.jpg}
+\includegraphics[width=3cm]{fig/profile2.jpg}
+\end{center}
+\end{column}
+\begin{column}{7cm}
+The laser beam has a Gaussian profile.
+\begin{enumerate}
+\item Direct a laser beam at a power meter, setting the correct wavelength
+\item Moving the knife edge across the beam path, record the drop in power vs distance.
+\item Setup a telescope to expand the beam size by 2-5 times.
+\item Repeat the knife edge process.
+\item Plot the results of both sets of measurements on paper and in excel.
+\end{enumerate}
+\end{column}
+\end{columns}
+\end{frame}
+
+\section{Mirrors}
 
 \begin{frame}\frametitle{Flat Mirror}
 
