--- a/bootcamp/quantum_math.tex
+++ b/bootcamp/quantum_math.tex
@@ -1074,7 +1074,7 @@ To add orthogonal (at right angles to each other) vectors in 3 Dimensions:
 
 \section{Probability and Statistics}
 
-\begin{frame}\frametitle{Statistics}
+\begin{frame}\frametitle{Probability and Statistics}
 \begin{columns}
 \begin{column}{5cm}
 \begin{center}
@@ -1091,16 +1091,29 @@ To add orthogonal (at right angles to each other) vectors in 3 Dimensions:
 \end{columns}
 \end{frame}
 
-\begin{frame}\frametitle{Summary Statistics}
-\begin{itemize}
-\item Mean
-\item Median
-\item Spread
-\item Interquartile Range (IQR)
-\item Standard Deviation
-\end{itemize}
+\begin{frame}\frametitle{A Tale as Old as Time}
+\begin{center}
+\includegraphics[width=6cm]{fig/vegas.jpg}
+\end{center}
+
+
+Gambling is as old as mankind, so it seems that probability should be almost as old. But, the realization that one could predict an outcome to a certain degree of accuracy was unconceivable until the $16^{th}$ century. In order to make a profit, underwriters were in need of dependable guidelines by which a profit could be expected, while the gambler was interested in predicting the possibility of gain.
 \end{frame}
 
+
+
+\begin{frame}\frametitle{Rich Guys Gambling}
+\begin{columns}
+\begin{column}{4cm}
+\begin{center}
+\includegraphics[width=3cm]{fig/cardano.jpg}
+\end{center}
+\end{column}
+\begin{column}{7.5cm}
+Known as the “Father of Probability”, Gerolamo Cardano was an Italian mathematician, physician, and gambler who first talked about probability. Cardano’s fascination with games of chance led him to write the first book dedicated to probability, “Liber de Ludo Aleae” (Book on Games of Chance), published in 1564. Cardano introduced concepts like odds and probabilities in this work, providing a framework for analyzing the likelihood of different outcomes in dice rolls and other games.
+\end{column}
+\end{columns}
+\end{frame}
 
 \begin{frame}\frametitle{Probability}
 
@@ -1241,19 +1254,21 @@ Galton Baord
 
 \begin{frame}\frametitle{Assignment: Measuring Bean Profile}
 \begin{columns}
-\begin{column}{6cm}
+\begin{column}{4cm}
 \begin{center}
-\includegraphics[width=6cm]{fig/profile.png}
+\includegraphics[width=3cm]{fig/profile1.jpg}
+\includegraphics[width=3cm]{fig/profile2.jpg}
 \end{center}
 \end{column}
-\begin{column}{5cm}
+\begin{column}{7cm}
 The laser beam has a Gaussian profile.
-\begin{itemize}
-\item Setup a telescope to expand the beam size
-\item Focus on the beam on an intensity detector
-\item Moving the knife edge across the beam path, record the drop in intensity vs distance.
-\item Plot the resulting data
-\end{itemize}
+\begin{enumerate}
+\item Direct a laser beam at a power meter, setting the correct wavelength
+\item Moving the knife edge across the beam path, record the drop in power vs distance.
+\item Setup a telescope to expand the beam size by 2-5 times.
+\item Repeat the knife edge process.
+\item Plot the results of both sets of measurements on paper and in excel.
+\end{enumerate}
 \end{column}
 \end{columns}
 \end{frame}
